Test fixed header on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -10,11 +10,6 @@
 }
 
 /*main*/
-
-body {
-  margin: 0 0 7.7%;
-}
-
 html {
   background-color: #612B25;
   position: relative;
@@ -223,4 +218,13 @@ button:active {
   #subcontent {
     margin-top: 20%;
   }
+
+header {
+  position: fixed;
+width: 100%;
+height: 15vh;
+left: 0;
+top: 0;
+}
+
 }
